fix color picker alignment

--- a/public/sass/CoursePlanner.scss
+++ b/public/sass/CoursePlanner.scss
@@ -321,6 +321,8 @@ li {
   color-picker {
     position: absolute;
     margin-top: -1px;
+    margin-left: -10px;
+
     span {
       display: inline-block !important;
       width: 15px !important;
